--- a/HELLO.ipynb
+++ b/HELLO.ipynb
@@ -1818,6 +1818,101 @@
     "a=27\n",
     "print(a%3==0 or a%5==0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#81. WAE to check the given number is not an Even Number.\n",
+    "a=25\n",
+    "print((a)%2!=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#82. WAE to check the given number is not an odd Number.\n",
+    "a=26\n",
+    "print((a)%2==0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#83. WAE to check the given number is not divisible by 3.\n",
+    "a=25\n",
+    "print((a)%3!=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#84. WAE to check the given number is not divisible by 3 and 5.\n",
+    "a=26\n",
+    "print(a%3!=0 and a%5!=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#85. WAE to check the given number is not divisible by 3 or 5.\n",
+    "a=26\n",
+    "print(a%3!=0 or a%5!=0)"
+   ]
   }
  ],
  "metadata": {
