--- a/HELLO.ipynb
+++ b/HELLO.ipynb
@@ -1793,6 +1793,984 @@
     "a=26\n",
     "print(a%3!=0 or a%5!=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "104\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#86. WAE to check the given character ASCII value is not divisible by 5.\n",
+    "a='h'\n",
+    "print(ord(a))\n",
+    "print(ord(a)%5!=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X\n"
+     ]
+    }
+   ],
+   "source": [
+    "#87. WAE to check find out the ASCII character in a given number.\n",
+    "a=88\n",
+    "print(chr(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65\n"
+     ]
+    }
+   ],
+   "source": [
+    "#88. WAE to find ASCII value of a given character.\n",
+    "a='A'\n",
+    "print(ord(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#89. WAE to check the given character is Upper case or not.\n",
+    "ch='A'\n",
+    "print(len(ch)==1 and 'A'<=ch<='Z')\n",
+    "#OR\n",
+    "ch='A'\n",
+    "print(len(ch)==1 and 65<=ord(ch)<=90)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#90. WAE to check the given character is a lower case or not.\n",
+    "ch='a'\n",
+    "print(len(ch)==1 and 'a'<=ch<='z')\n",
+    "#OR\n",
+    "ch='c'\n",
+    "print(len(ch)==1 and 97<=ord(ch)<=122)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#91. WAE to check the given character is a alphabet or not.\n",
+    "ch='U'\n",
+    "print( len(ch)==1 and 'A'<=ch<='Z' or 'a'<=ch<='z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#92. WAE to check the given character is the ASCII Number.\n",
+    "ch='5'\n",
+    "print(len(ch)==1 and '0'<=ch<='9')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#93. WAE to check the given character is special character or not.\n",
+    "a='@'\n",
+    "print('A'<=a<='Z' or 'a'<=a<='z' or '0'<=a<='9')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#94. WAE to check the given character should not be Upper case.\n",
+    "a='A'\n",
+    "print(not('A'<=a<='Z'))\n",
+    "ch='a'\n",
+    "print(not('A'<=ch<='Z' ))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#95. WAE to check the given character should not be lower case.\n",
+    "a='A'\n",
+    "print(not('a'<=a<='z'))\n",
+    "ch='a'\n",
+    "print(not('a'<=ch<='z'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#96. WAE to check the given character should not be alphabet.\n",
+    "a='0'\n",
+    "print(not('A'<=a<='Z' or 'a'<=a<='z'))\n",
+    "ch='d'\n",
+    "print(not('A'<=ch<='Z' or 'a'<=ch<='z'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#97. WAE to check the given character should not be an ASCII Number.\n",
+    "a='$'\n",
+    "print(not(ord(a)>48 and ord(a)<58))\n",
+    "ch='9'\n",
+    "print(not(ord(ch)>= 48 and ord(ch) <= 57))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#98. WAE to check the given character should not be a special character.\n",
+    "a='*'\n",
+    "print('A'<=a<='Z' or 'a'<=a<='z' or '0'<=a<='9')\n",
+    "ch='a'\n",
+    "print('A'<=ch<='Z' or 'a'<=ch<='z' or '0'<=ch<='9')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#99. WAE to check the given character is vowel.\n",
+    "a='A'\n",
+    "print(a=='A' or a=='E' or a=='I' or a=='O' or a=='U' or a=='a' or a=='e' or a=='i' or a=='o' or a=='u')\n",
+    "a='t'\n",
+    "print(a=='A' or a=='E' or a=='I' or a=='O' or a=='U' or a=='a' or a=='e' or a=='i' or a=='o' or a=='u')\n",
+    "#OR\n",
+    "a='e'\n",
+    "print(a in 'AEIOUaeiou')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#100. WAE to check the given character is a consonant.\n",
+    "a='S'\n",
+    "print(not(a=='A' or a=='E' or a=='I' or a=='O' or a=='U' or a=='a' or a=='e' or a=='i' or a=='o' or a=='u'))\n",
+    "a='I'\n",
+    "print(not(a=='A' or a=='E' or a=='I' or a=='O' or a=='U' or a=='a' or a=='e' or a=='i' or a=='o' or a=='u'))\n",
+    "#OR\n",
+    "ch='H'\n",
+    "print(not(a=='A' or a=='E' or a=='I' or a=='O' or a=='U' or a=='a' or a=='e' or a=='i' or a=='o' or a=='u'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "#101. WAS to convert uppercase to lowercase in a given character.\n",
+    "ch='A'\n",
+    "print(chr(ord(ch)+32))\n",
+    "#OR\n",
+    "ch='a'\n",
+    "print(ch.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "#102. WAS to convert lowercase to uppercase in a given character.\n",
+    "ch='a'\n",
+    "print(chr(ord(ch)-32))\n",
+    "#OR\n",
+    "ch='a'\n",
+    "print(ch.upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "#103. WAS to extract the previous character in the given character.\n",
+    "ch='B'\n",
+    "print(chr(ord(ch)-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E\n"
+     ]
+    }
+   ],
+   "source": [
+    "#104. WAS to extract the next character in the given character.\n",
+    "ch='D'\n",
+    "print(chr(ord(ch)+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#105. WAS to check the given character is converted to ASCII value and the value is a EVEN as well as character should be lowercase.\n",
+    "ch='d'\n",
+    "print(len(ch)==1 and ord(ch)%2==0 and 'a'<=ch<='z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#106. WAS to check the given character is converted to ASCII value and the value is a ODD as well as character should be uppercase.\n",
+    "ch='E'\n",
+    "print(len(ch)==1 and ord(ch)%2!=0 and 'A'<=ch<='z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#107. WAS to check which the given number is converted to character is not a special symbol.\n",
+    "n=57\n",
+    "print('A'<=chr(n)<='Z' or 'a'<=chr(n)<='z' or '0'<=chr(n)<='9')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#108. WAS to check the given number of the character is vowel.\n",
+    "n=65\n",
+    "print(chr(n) in 'AEIOUaeiou')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#109.WAS to check if the 1st and 2nd characters are sequence or not in a given string.\n",
+    "ch='ABCD'\n",
+    "ord(ch[0])+1==ord(ch[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#110. WAS to check if the given character ASCII value should be greater than 50 or greater than 25 or less than 112.\n",
+    "ch='A'\n",
+    "print(ord(ch)>50 or ord(ch)<112)\n",
+    "#OR\n",
+    "ch='A'\n",
+    "print(50<ord(ch)<112)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57\n"
+     ]
+    }
+   ],
+   "source": [
+    "#111. WAS to given number is increased by 1.\n",
+    "n=56\n",
+    "n+=1\n",
+    "print(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58\n"
+     ]
+    }
+   ],
+   "source": [
+    "#112. WAS to a given number increased by 2.\n",
+    "n=56\n",
+    "n+=2\n",
+    "print(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58\n"
+     ]
+    }
+   ],
+   "source": [
+    "#112. WAS to a given number increased by 2.\n",
+    "n=56\n",
+    "n+=2\n",
+    "print(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n"
+     ]
+    }
+   ],
+   "source": [
+    "#114. WAS to given number decreased by 3.\n",
+    "n=56\n",
+    "n-=3\n",
+    "print(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#115. WAS to check the integer number is present in the collection.\n",
+    "n=10\n",
+    "coll=[10,20,30]\n",
+    "print(n in coll)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "110\n"
+     ]
+    }
+   ],
+   "source": [
+    "#116. WAS to check petrform the addition operation on A value and B value and final value should be assigned to A.\n",
+    "A=50\n",
+    "B=60\n",
+    "A+=B\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#117. WAS to check given value is present in collection.\n",
+    "st='D'\n",
+    "coll='PYSPIDERS'\n",
+    "print(st in coll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#118. WAE to check the given list is present in the list.\n",
+    "a=[1,2]\n",
+    "li=[1,2,[1,2],'hai',(10,20)]\n",
+    "print(a in li)\n",
+    "\n",
+    "ch=(1,2)\n",
+    "coll=(10,'hai',1,2,[1,2],(1,2))\n",
+    "print(ch in coll)\n",
+    "\n",
+    "st=10\n",
+    "col={10 ,'hai',(10,20),(10,'hai')}\n",
+    "print(st in col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#119. WAE to check the given dict value is present in tuple.\n",
+    "d={'a':10}\n",
+    "t=(10,20,30)\n",
+    "print(d['a'] in t)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#120. WAE to check the given value is Integer or not.\n",
+    "a=15\n",
+    "print(type(a)==int)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#121. WAE to check the given value is string or not.\n",
+    "a='ABCD'\n",
+    "print(type(a)==str)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#122. WAE to check the value is single value or not.\n",
+    "a=b'1010'\n",
+    "print(type(a) in [int,float,complex,bytes,bool,type(None)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#123. WAE to check the given value should not be single value.\n",
+    "a=b'0101'\n",
+    "print(type(a) not in [int,float,complex,bytes,bool,type(None)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#124. WAE to check the given value is multivalue or not.\n",
+    "a='helloworld'\n",
+    "print(type(a) in [str,list,tuple,set,dict])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#125. WAE to check given value is a mutable value or not.\n",
+    "a=[1,2]\n",
+    "print(type(a) in [list,set,dict])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#126. WAE to check given value is a immutable value or not.\n",
+    "a=[2,3]\n",
+    "print(type(a) in [list,set,dict])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#127. WAE to check if a given value is divisibly by 6 as well as the value present in collection or not.\n",
+    "n=36\n",
+    "print(n%6==0 and  n in [10,20,44,50,36,90])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#128.WAE to check perform the bitwise and operation in given values are 15 and 19.\n",
+    "m=15\n",
+    "n=19\n",
+    "print(m&n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "127\n"
+     ]
+    }
+   ],
+   "source": [
+    "#129.WAE to check perform the bitwise or operation in given values are 115 and 79.\n",
+    "m=115\n",
+    "n=79\n",
+    "print(m|n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46\n"
+     ]
+    }
+   ],
+   "source": [
+    "#130.WAE to check perform the bitwise XOR operator in given values are 56 and 22.\n",
+    "m=56\n",
+    "n=22\n",
+    "print(m^n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "#131.WAE to perform the bitwise not operator in given value as 15.\n",
+    "n=15\n",
+    "print(~n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256\n"
+     ]
+    }
+   ],
+   "source": [
+    "#132.WAE to perform the bitwise left shift with 32 and skipping value is 3.\n",
+    "m=32\n",
+    "n=3\n",
+    "print(m<<n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
