--- a/HELLO.ipynb
+++ b/HELLO.ipynb
@@ -2767,10 +2767,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#133.WAE to perform the bitwise right shift with 25 and skipping value is 2.\n",
+    "m=25\n",
+    "n=2\n",
+    "print(m>>n)"
+   ]
   }
  ],
  "metadata": {
