--- a/HELLO.ipynb
+++ b/HELLO.ipynb
@@ -2784,6 +2784,159 @@
     "n=2\n",
     "print(m>>n)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#134. Find out the output of the given value condition.\n",
+    "m=(10+20*60 and 10**3) or ({10,20} or not ([15-16]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#135. WAE to check a given key is present in dict or not.\n",
+    "d={'a':10,'b':20,'c':30}\n",
+    "k= 'a'\n",
+    "print(k in d)\n",
+    "#OR\n",
+    "d={'a':10,'b':20,'c':30}\n",
+    "k= 'a'\n",
+    "print(k in d.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#136. WAE to check if a given value is present in dict or not.\n",
+    "d={'a':10,'b':20,'c':30}\n",
+    "k=10\n",
+    "print(k in d)\n",
+    "#so, upper equation is not possible for values.\n",
+    "d={'a':10,'b':20,'c':30}\n",
+    "k=10\n",
+    "print(k in d.values())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#137. WAE to check if a given key is not present in a dict or not.\n",
+    "d={'a':10,'b':20,'c':30}\n",
+    "k= 'a'\n",
+    "print(k not in d)\n",
+    "#OR\n",
+    "d={'a':10,'b':20,'c':30}\n",
+    "k= 'a'\n",
+    "print(k not in d.keys())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#138. WAE to check if a key value pair present in dict or not.\n",
+    "d={'a':10,'b':20,'c':30}\n",
+    "k=('a',10)\n",
+    "print(k in d.items())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#139. WAE to check if two values are pointing the same memory or not.\n",
+    "  #If values are present in between (-5 to 256) then it has same memory.\n",
+    "print(25==25) #Here both values are int type so it is showing true.\n",
+    "#OR\n",
+    "a=25\n",
+    "b=25\n",
+    "print(a is b) #Here both values are int type and has same memory so it is showing true. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#140. WAE to check both values should be integer and both the values are pointing to the same address.\n",
+    "a=256\n",
+    "b=256\n",
+    "print(type(a)==int and type(b)==int and a is b) #If values are present in between (-5 to 256) then it has same memory.\n",
+    "a=260\n",
+    "b=260\n",
+    "print(type(a)==int and type(b)==int and a is b) #Here both values are int type and has different memory so it is showing false."
+   ]
   }
  ],
  "metadata": {
